# Bruschetta

./: .flaskenv  .gitignore  api.py  app.py  bruschetta.conf  bruschetta.conf.example  coverarts.py  docker-compose.yml  hello.py  manage.py  models.py  pyproject.toml  requirements.txt  timezone.py  utils.py  views.py
.github/: dependabot.yml
api/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
api/bruschetta/: __init__.py  apiv2.py  models.py
api/bruschetta/templates/book/: add.html
api/bruschetta/templates/category/: add.html
app/: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  quasar.config.js
bruschetta/: __init__.py  api.py  apiv2.py  app.py  config.py  coverarts.py  models.py  timezone.py  utils.py  views.py
bruschetta/static/: style.css
bruschetta/templates/: book_add.html  book_categorized.html  book_detail.html  book_edit.html  book_fetch_coverart.html  book_list_disposed.html  book_new.html  book_upload_coverart.html  books.html  category_add.html  category_list.html  format_add.html  format_list.html  index.html  layout.html
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/api/: Dockerfile
docker/app/: Dockerfile
docker/nginx/: default.conf
migrations/versions/: 0bff8cd02ef3_create_tables.py  1821fe006433_create_bookshelves_table.py  1f82af08e781_create_tables.py  3ccfddd40b69_create_bookshelves_table.py  (+3 more)
nginx/: default.conf
templates/: book_add.html  book_detail.html  book_edit.html  book_list_disposed.html  bookshelf_detail.html  bookshelf_list.html  layout.html
(+23 files in other folders)
