[tool.poetry]
name = "bruschetta"
version = "0.2.1"
description = "Book collection management system."
authors = ["takatoh <takatoh.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Script = "^2.0.6"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.19.2"
requests = "^2.26.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
