[tool.poetry]
name = "bruschetta"
version = "1.0.0"
description = "Book collection management system."
authors = ["takatoh <takatoh.m@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.0"
Flask-Migrate = "^4.0.0"
flask-cors = "^6.0.0"
python-dotenv = "^1.2.0"
requests = "^2.32.2"
Pillow = "^12.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
